Fix definition select dialog not showing all entries

--- a/projects/kypo-training-agenda/adaptive-instance-edit/src/components/adaptive-definition-select/adaptive-definition-select.component.css
+++ b/projects/kypo-training-agenda/adaptive-instance-edit/src/components/adaptive-definition-select/adaptive-definition-select.component.css
@@ -2,8 +2,12 @@
   flex: 1 1 auto;
 }
 
+.list-spacer {
+  margin: 16px 0;
+}
+
 .content {
-  min-width: 400px;
+  min-width: 500px;
 }
 
 .empty-content {
